# materials-evidence-stack

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QM34_TRANSFER.md  README.md  SECURITY.md  pyproject.toml  qm20_builder.py
artifacts/: FINAL_QM14_REBUILT_DELIVERY_SUMMARY.json  FINAL_QM14_REBUILT_SHA256.txt
deliverables/: FINAL_QM10.sha256  QM10_SUMMARY.md
docs/: architecture.md  ci_evidence.md  ci_evidence_placeholder.md  evaluation.md  evidence_model.md  maintainer_statement.md  openai_application_note.md  openai_evidence_packet_template.md  public_roadmap_issues.md  quickstart.md  release_notes_v0.1.0.md  research_context.md
g06_remote/: TRIGGER_2.txt  build_g06.py  build_g06_final.py
g09_remote/: build_g09.py
g11_remote/: build_g11.py  direct_artifact_trigger.txt  requirements-ci.txt
qm01_delivery/: FINAL_QM01.zip.sha256  QM01_DELIVERY_RECEIPT.json  TRIGGER  build_final_qm01.py
qm05/: build_qm05.py
qm09_remote/: build_qm09.py  requirements-ci.txt
qm10/: build_qm10.py  run_qm10.py
qm11_web_return/: build_qm11.py
qm14_remote/: build_qm14.py  fix_and_run.py  requirements-ci.txt
qm19/: qm19_build.py
qm20_remote/: build_qm20.py
qm21/: build_qm21.py  run_build.py
qm22_remote/: TRIGGER2  TRIGGER3  build_qm22.py  postfix_qm22.py  requirements-ci.txt
qm25_remote/: build_qm25.py
qm28_compute/: build_qm28_public.py  direct_artifact_trigger.txt  pr_probe.txt  probe_trigger.txt  release_trigger.txt
qm28_public/: TRIGGER  run.sh
qm29_remote/: build_qm29.py
qm30_remote/: build_qm30.py
qm34_remote/: build_qm34.py  plot_all.py  (+4 more)
(+148 files in other folders)
